--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,3 @@
 mountpoints:
   /:
-    url: "https://author-p9552-e1385456.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xwalk/main"
-    type: "markup"
-    suffix: ".html"
+    url: https://publish-p9552-e1385456.adobeaemcloud.com
