--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,3 +1,5 @@
 mountpoints:
   /:
-    url: https://publish-p9552-e1385456.adobeaemcloud.com
+    url: "https://author-p9552-e1385456.adobeaemcloud.com/bin/franklin.delivery/rfreemo/eds-karate-xwalk/main"
+    type: "markup"
+    suffix: ".html"
